--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -572,62 +572,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from selenium import webdriver\n",
+    "from msedge.selenium_tools import Edge\n",
+    "from msedge.selenium_tools import EdgeOptions\n",
+    "from selenium.common.exceptions import NoSuchElementException\n",
     "import time\n",
     "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "url = \"https://www.zillow.com/la-jolla-san-diego-ca/rentals\"\n",
+    "header = {'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.69 Safari/537.36 Edg/95.0.1020.53',\n",
+    "          'refer': url}"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/bd/3fcn_cld06z1y5f68_qm162m0000gn/T/ipykernel_77255/941230794.py:4: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Edge('/Users/barryxue/Documents/msedgedriver', options=options)\n"
-     ]
-    },
-    {
-     "ename": "WebDriverException",
-     "evalue": "Message: unknown error: MSEdge failed to start: exited normally.\n  (chrome not reachable)\n  (The process started from msedge location /Applications/Microsoft Edge.app/Contents/MacOS/Microsoft Edge is no longer running, so MSEdgeDriver is assuming that MSEdge has crashed.)\nStacktrace:\n0   msedgedriver                        0x0000000105163919 __gxx_personality_v0 + 591769\n1   msedgedriver                        0x00000001050ed073 __gxx_personality_v0 + 106227\n2   msedgedriver                        0x0000000104ca4658 msedgedriver + 173656\n3   msedgedriver                        0x0000000104ccae29 msedgedriver + 331305\n4   msedgedriver                        0x0000000104cc5a0f msedgedriver + 309775\n5   msedgedriver                        0x0000000104d00d1d msedgedriver + 552221\n6   msedgedriver                        0x0000000104cfa383 msedgedriver + 525187\n7   msedgedriver                        0x0000000104cd03fa msedgedriver + 353274\n8   msedgedriver                        0x0000000104cd17a5 msedgedriver + 358309\n9   msedgedriver                        0x000000010511ee5b __gxx_personality_v0 + 310491\n10  msedgedriver                        0x00000001051375a6 __gxx_personality_v0 + 410662\n11  msedgedriver                        0x000000010513ce8b __gxx_personality_v0 + 433419\n12  msedgedriver                        0x0000000105138c84 __gxx_personality_v0 + 416516\n13  msedgedriver                        0x0000000105113cdb __gxx_personality_v0 + 265051\n14  msedgedriver                        0x0000000105153a88 __gxx_personality_v0 + 526600\n15  msedgedriver                        0x0000000105153c48 __gxx_personality_v0 + 527048\n16  msedgedriver                        0x000000010516ad48 __gxx_personality_v0 + 621512\n17  libsystem_pthread.dylib             0x00007ff805f99514 _pthread_start + 125\n18  libsystem_pthread.dylib             0x00007ff805f9502f thread_start + 15\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mWebDriverException\u001B[0m                        Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/bd/3fcn_cld06z1y5f68_qm162m0000gn/T/ipykernel_77255/941230794.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0moptions\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0muse_chromium\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;32mTrue\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m \u001B[0mdriver\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mwebdriver\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mEdge\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'/Users/barryxue/Documents/msedgedriver'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0moptions\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0moptions\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;32m~/miniforge3/envs/cse158/lib/python3.8/site-packages/selenium/webdriver/edge/webdriver.py\u001B[0m in \u001B[0;36m__init__\u001B[0;34m(self, executable_path, port, options, service_args, capabilities, service_log_path, service, keep_alive, verbose)\u001B[0m\n\u001B[1;32m     60\u001B[0m             \u001B[0mservice\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mService\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mexecutable_path\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mport\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mservice_args\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mservice_log_path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     61\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 62\u001B[0;31m         super(WebDriver, self).__init__(DesiredCapabilities.EDGE['browserName'], \"ms\",\n\u001B[0m\u001B[1;32m     63\u001B[0m                                         \u001B[0mport\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0moptions\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     64\u001B[0m                                         \u001B[0mservice_args\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcapabilities\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/miniforge3/envs/cse158/lib/python3.8/site-packages/selenium/webdriver/chromium/webdriver.py\u001B[0m in \u001B[0;36m__init__\u001B[0;34m(self, browser_name, vendor_prefix, port, options, service_args, desired_capabilities, service_log_path, service, keep_alive)\u001B[0m\n\u001B[1;32m     91\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     92\u001B[0m         \u001B[0;32mtry\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 93\u001B[0;31m             RemoteWebDriver.__init__(\n\u001B[0m\u001B[1;32m     94\u001B[0m                 \u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     95\u001B[0m                 command_executor=ChromiumRemoteConnection(\n",
-      "\u001B[0;32m~/miniforge3/envs/cse158/lib/python3.8/site-packages/selenium/webdriver/remote/webdriver.py\u001B[0m in \u001B[0;36m__init__\u001B[0;34m(self, command_executor, desired_capabilities, browser_profile, proxy, keep_alive, file_detector, options)\u001B[0m\n\u001B[1;32m    266\u001B[0m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfile_detector\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mfile_detector\u001B[0m \u001B[0;32mor\u001B[0m \u001B[0mLocalFileDetector\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    267\u001B[0m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mstart_client\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 268\u001B[0;31m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mstart_session\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcapabilities\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbrowser_profile\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    269\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    270\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0m__repr__\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/miniforge3/envs/cse158/lib/python3.8/site-packages/selenium/webdriver/remote/webdriver.py\u001B[0m in \u001B[0;36mstart_session\u001B[0;34m(self, capabilities, browser_profile)\u001B[0m\n\u001B[1;32m    357\u001B[0m         parameters = {\"capabilities\": w3c_caps,\n\u001B[1;32m    358\u001B[0m                       \"desiredCapabilities\": capabilities}\n\u001B[0;32m--> 359\u001B[0;31m         \u001B[0mresponse\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mCommand\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mNEW_SESSION\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mparameters\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    360\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0;34m'sessionId'\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mresponse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    361\u001B[0m             \u001B[0mresponse\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mresponse\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'value'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/miniforge3/envs/cse158/lib/python3.8/site-packages/selenium/webdriver/remote/webdriver.py\u001B[0m in \u001B[0;36mexecute\u001B[0;34m(self, driver_command, params)\u001B[0m\n\u001B[1;32m    422\u001B[0m         \u001B[0mresponse\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcommand_executor\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdriver_command\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mparams\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    423\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0mresponse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 424\u001B[0;31m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0merror_handler\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcheck_response\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mresponse\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    425\u001B[0m             response['value'] = self._unwrap_value(\n\u001B[1;32m    426\u001B[0m                 response.get('value', None))\n",
-      "\u001B[0;32m~/miniforge3/envs/cse158/lib/python3.8/site-packages/selenium/webdriver/remote/errorhandler.py\u001B[0m in \u001B[0;36mcheck_response\u001B[0;34m(self, response)\u001B[0m\n\u001B[1;32m    245\u001B[0m                 \u001B[0malert_text\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mvalue\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'alert'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'text'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    246\u001B[0m             \u001B[0;32mraise\u001B[0m \u001B[0mexception_class\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmessage\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mscreen\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mstacktrace\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0malert_text\u001B[0m\u001B[0;34m)\u001B[0m  \u001B[0;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 247\u001B[0;31m         \u001B[0;32mraise\u001B[0m \u001B[0mexception_class\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmessage\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mscreen\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mstacktrace\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    248\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    249\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0m_value_or_default\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mobj\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mMapping\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0m_KT\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0m_VT\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mkey\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0m_KT\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdefault\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0m_VT\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0m_VT\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mWebDriverException\u001B[0m: Message: unknown error: MSEdge failed to start: exited normally.\n  (chrome not reachable)\n  (The process started from msedge location /Applications/Microsoft Edge.app/Contents/MacOS/Microsoft Edge is no longer running, so MSEdgeDriver is assuming that MSEdge has crashed.)\nStacktrace:\n0   msedgedriver                        0x0000000105163919 __gxx_personality_v0 + 591769\n1   msedgedriver                        0x00000001050ed073 __gxx_personality_v0 + 106227\n2   msedgedriver                        0x0000000104ca4658 msedgedriver + 173656\n3   msedgedriver                        0x0000000104ccae29 msedgedriver + 331305\n4   msedgedriver                        0x0000000104cc5a0f msedgedriver + 309775\n5   msedgedriver                        0x0000000104d00d1d msedgedriver + 552221\n6   msedgedriver                        0x0000000104cfa383 msedgedriver + 525187\n7   msedgedriver                        0x0000000104cd03fa msedgedriver + 353274\n8   msedgedriver                        0x0000000104cd17a5 msedgedriver + 358309\n9   msedgedriver                        0x000000010511ee5b __gxx_personality_v0 + 310491\n10  msedgedriver                        0x00000001051375a6 __gxx_personality_v0 + 410662\n11  msedgedriver                        0x000000010513ce8b __gxx_personality_v0 + 433419\n12  msedgedriver                        0x0000000105138c84 __gxx_personality_v0 + 416516\n13  msedgedriver                        0x0000000105113cdb __gxx_personality_v0 + 265051\n14  msedgedriver                        0x0000000105153a88 __gxx_personality_v0 + 526600\n15  msedgedriver                        0x0000000105153c48 __gxx_personality_v0 + 527048\n16  msedgedriver                        0x000000010516ad48 __gxx_personality_v0 + 621512\n17  libsystem_pthread.dylib             0x00007ff805f99514 _pthread_start + 125\n18  libsystem_pthread.dylib             0x00007ff805f9502f thread_start + 15\n"
-     ]
-    }
-   ],
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
    "source": [
-    "options = webdriver.EdgeOptions()\n",
+    "options = EdgeOptions()\n",
     "options.use_chromium = True\n",
-    "\n",
-    "driver = webdriver.Edge('/Users/barryxue/Documents/msedgedriver', options=options)"
-   ]
+    "options.add_argument('--window-size=1000,800')\n",
+    "driver = Edge(options = options)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "driver.get(url)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
