--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,15 +587,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# initializes the webscraper\n",
     "options = EdgeOptions()\n",
     "options.use_chromium = True\n",
+    "proxy_ip = \"103.92.114.2:80\" # from freeproxy.com\n",
+    "options.add_argument(\"--proxy-server=%s\" % proxy_ip)\n",
     "options.add_argument('--ignore-certificate-errors')\n",
     "options.add_argument('--incognito')\n",
-    "# options.add_argument('--headless')\n",
+    "options.add_argument('start-maximized')\n",
+    "# options.add_argument('--headless') # use headless if don't want a window to pop up\n",
     "driver = Edge(options = options)"
    ],
    "metadata": {
@@ -607,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "# open target page\n",
@@ -625,53 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "# incrementally scroll to the bottom of the page then extract the page html\n",
-    "driver.execute_script(\"document.getElementById('search-page-list-container').scrollTo(0, 600)\") # 600 per 3 rows of listings "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
-   "source": [
-    "driver.execute_script(\"document.getElementById('search-page-list-container').scrollTo(0, 1200)\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "driver.execute_script(\"document.getElementById('search-page-list-container').scrollTo(0, 1800)\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# parse source elements with bs4"
+    "scroll_height = driver.find_element_by_id(\"grid-search-results\").size['height']\n",
+    "current, step = 0, 200\n",
+    "while current<scroll_height:\n",
+    "    current += step\n",
+    "    driver.execute_script(f\"document.getElementById('search-page-list-container').scrollTo(0, {current})\") # 600 per 3 rows of listings\n",
+    "    time.sleep(1)"
    ],
    "metadata": {
     "collapsed": false,
