--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -567,12 +567,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use Selenium to simulate scrolling"
+    "### Updated: Use Selenium to simulate scrolling in order to load all the elements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,6 +580,7 @@
     "from msedge.selenium_tools import EdgeOptions\n",
     "from selenium.common.exceptions import NoSuchElementException\n",
     "import time\n",
+    "import os\n",
     "import csv\n",
     "import requests\n",
     "from bs4 import BeautifulSoup as soup"
@@ -587,14 +588,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "# initializes the webscraper\n",
+    "# initializes the webscraper (function __init__)\n",
     "options = EdgeOptions()\n",
     "options.use_chromium = True\n",
-    "proxy_ip = \"103.92.114.2:80\" # from freeproxy.com\n",
-    "options.add_argument(\"--proxy-server=%s\" % proxy_ip)\n",
+    "# need to find ways to dynamically implement a proxy\n",
+    "# proxy_ip = \"103.92.114.2:80\" # from freeproxy.com\n",
+    "# options.add_argument(\"--proxy-server=%s\" % proxy_ip)\n",
     "options.add_argument('--ignore-certificate-errors')\n",
     "options.add_argument('--incognito')\n",
     "options.add_argument('start-maximized')\n",
@@ -610,12 +612,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "# open target page\n",
+    "# open target page (might fail, gotta be put into a try block in actual code) (function __init__)\n",
     "url = \"https://www.zillow.com/la-jolla-san-diego-ca/rentals\"\n",
-    "header = {'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.69 Safari/537.36 Edg/95.0.1020.53', 'refer': url}\n",
+    "# header = {'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.69 Safari/537.36 Edg/95.0.1020.53', 'refer': url} # not necessary\n",
     "driver.get(url)\n",
     "time.sleep(3)"
    ],
@@ -628,16 +630,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "outputs": [],
    "source": [
-    "# incrementally scroll to the bottom of the page then extract the page html\n",
+    "# incrementally scroll to the bottom of the page then extract the page html (function load_page)\n",
     "scroll_height = driver.find_element_by_id(\"grid-search-results\").size['height']\n",
     "current, step = 0, 200\n",
     "while current<scroll_height:\n",
     "    current += step\n",
     "    driver.execute_script(f\"document.getElementById('search-page-list-container').scrollTo(0, {current})\") # 600 per 3 rows of listings\n",
     "    time.sleep(1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (Temp/ipykernel_18208/359194341.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;36m  File \u001B[1;32m\"C:\\Users\\xueze\\AppData\\Local\\Temp/ipykernel_18208/359194341.py\"\u001B[1;36m, line \u001B[1;32m7\u001B[0m\n\u001B[1;33m    \u001B[0m\n\u001B[1;37m    ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save the html source from all the listings (function extract_listings)\n",
+    "listings = driver.find_elements_by_css_selector(\".list-card.list-card-additional-attribution.list-card_not-saved\")\n",
+    "listings_html = [l.get_attribute('innerHTML') for l in listings]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "# temporary block that save html source into a file for later prototyping\n",
+    "def save_listings_html(listings_html=listings_html, filename=\"listings_html.txt\"):\n",
+    "    if os.path.exists(filename):\n",
+    "        os.remove(filename)\n",
+    "    with open(filename, 'a') as file:\n",
+    "        for lst in listings_html:\n",
+    "            file.write(lst)\n",
+    "            file.write('\\n')\n",
+    "save_listings_html()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# parsing the html souce data (function extract_listing)\n",
+    "classes = [\"list-card-addr\", \"list-card-price\"]\n",
+    "categories = [\"Address\", \"Price\"]\n",
+    "for lst in listings_html:\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'<div class=\"list-card-info\"><a href=\"https://www.zillow.com/homedetails/5734-Dolphin-Pl-La-Jolla-CA-92037/16855407_zpid/\" class=\"list-card-link list-card-link-top-margin\" tabindex=\"0\"><address class=\"list-card-addr\">5734 Dolphin Pl, La Jolla, CA 92037</address></a><div class=\"list-card-footer\"></div><div class=\"list-card-heading\"><div class=\"list-card-price\">$17,500/mo</div><ul class=\"list-card-details\"><li class=\"\">3<abbr class=\"list-card-label\"> bds</abbr></li><li class=\"\">3.5<abbr class=\"list-card-label\"> ba</abbr></li><li class=\"\">2,950<abbr class=\"list-card-label\"> sqft</abbr></li><li class=\"list-card-statusText\">- House for rent</li></ul></div></div><div class=\"list-card-top\"><div class=\"list-card-variable-text list-card-img-overlay\">3 days ago</div><a href=\"https://www.zillow.com/homedetails/5734-Dolphin-Pl-La-Jolla-CA-92037/16855407_zpid/\" class=\"list-card-link list-card-link-top-margin list-card-img\" tabindex=\"-1\" aria-hidden=\"false\"><img class=\"\" src=\"https://photos.zillowstatic.com/fp/292fd7c76e56c90d33b715857377a9ed-p_e.jpg\" alt=\"5734 Dolphin Pl, La Jolla, CA 92037\" aria-hidden=\"false\"></a></div><div class=\"list-card-actions\"><button class=\"list-card-save\" type=\"button\" aria-label=\"Save\"><span class=\"list-card-save-content\" tabindex=\"-1\" role=\"presentation\"><svg xmlns=\"http://www.w3.org/2000/svg\" width=\"34\" height=\"34\" viewBox=\"0 0 31 31\" focusable=\"false\"><title>Save this home</title><path transform=\"translate(3 3)\" fill=\"#000\" fill-opacity=\"0.2\" stroke=\"#FFF\" stroke-width=\"2\" d=\"M18.5,0.00109769484 C22.0897727,0.00109769484 25,2.81119649 25,6.27991218 C25,8.06147091 24.2318182,9.66630077 22.9977273,10.8100988 L12.5,21 L1.8125,10.6256861 C0.690909091,9.49725576 0,7.96706915 0,6.27881449 C0,2.81119649 2.91022727,3.19744231e-14 6.5,3.19744231e-14 C9.20227273,3.19744231e-14 11.5193182,1.5949506 12.5,3.86388584 C13.4795455,1.5949506 15.7965909,0.00109769484 18.5,0.00109769484 L18.5,0.00109769484 Z\"></path></svg></span></button></div>'"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listings_html[10]"
    ],
    "metadata": {
     "collapsed": false,
