--- a/Craigslist scraping.ipynb
+++ b/Craigslist scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "471e0bb2-44d7-4bcf-ac82-e2598020f6f2",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "9f0c2e53-a382-4f8c-aa73-0081b4d01e1d",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "1fb758f6-f00a-421d-ab38-254c9867c85f",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "d582714b-0451-4437-8068-74cc58e205d1",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "69252f04-3bdb-4abd-9f9d-7939779f4036",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "e39a40ef-92c7-41c3-9e20-5de73ba5b694",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "e1a0608b-92e4-4a2f-abf0-3859857260e8",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "efd6c242-cfb9-4129-9e97-f8518cc0d362",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "6182570e-583f-40ee-9444-f7e8d2ce57c1",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "333c1cf9-efd3-4285-8e4a-96ebf79b8aa3",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "b2252836-81a1-41a4-8d1c-254a3e5ef623",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "7cacc772-b9b9-41cb-a568-aa921b6b4fde",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "3519b412-c425-4482-9677-9b1dfefbf5aa",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "d94d1030-ff01-4ff4-9102-bacb20960eb9",
    "metadata": {},
    "outputs": [],
@@ -363,28 +363,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "900cc964-bf22-46fa-983b-8e78cdb139b6",
+   "execution_count": 41,
+   "id": "a80c1357-e8c9-4bcb-8473-b1f8651aa0bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scrape_pages()"
+    "def scraper():\n",
+    "    try:\n",
+    "        scrape_pages()\n",
+    "    except:\n",
+    "        rescrape()\n",
+    "    finally:\n",
+    "        rescrape()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8d0e86f4-ad3d-4791-9db0-db9fc7fb4a7b",
+   "execution_count": 42,
+   "id": "63cd64a7-2baa-4ec0-a24c-536bf3549e7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rescrape()"
+    "scraper()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7430e42b-97b3-49e8-a54a-52b0e25376a3",
+   "id": "74606e0b-747e-4dee-ae9a-cb7e0708df5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dddf355-6198-42ac-9a6f-6bd898ac6ccb",
    "metadata": {},
    "outputs": [],
    "source": []
