Cleaned some files up

--- a/Craigslist scraping.ipynb
+++ b/Craigslist scraping.ipynb
@@ -14,7 +14,8 @@
     "import re\n",
     "import time\n",
     "import random\n",
-    "import csv"
+    "import csv\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1fb758f6-f00a-421d-ab38-254c9867c85f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +50,8 @@
     "    'price',\n",
     "    'address',\n",
     "    'sqft',\n",
-    "    'features'\n",
+    "    'features',\n",
+    "    'scrape_date'\n",
     "]"
    ]
   },
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "69252f04-3bdb-4abd-9f9d-7939779f4036",
    "metadata": {},
    "outputs": [],
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e39a40ef-92c7-41c3-9e20-5de73ba5b694",
    "metadata": {},
    "outputs": [],
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e1a0608b-92e4-4a2f-abf0-3859857260e8",
    "metadata": {},
    "outputs": [],
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "efd6c242-cfb9-4129-9e97-f8518cc0d362",
    "metadata": {},
    "outputs": [],
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "6182570e-583f-40ee-9444-f7e8d2ce57c1",
    "metadata": {},
    "outputs": [],
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "333c1cf9-efd3-4285-8e4a-96ebf79b8aa3",
    "metadata": {},
    "outputs": [],
@@ -262,12 +264,13 @@
     "    row.update(info)\n",
     "    features = scrape_features(post)\n",
     "    row.update(features)\n",
+    "    row['scrape_date'] = datetime.today()\n",
     "    return row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "b2252836-81a1-41a4-8d1c-254a3e5ef623",
    "metadata": {},
    "outputs": [],
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "7cacc772-b9b9-41cb-a568-aa921b6b4fde",
    "metadata": {},
    "outputs": [],
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "3519b412-c425-4482-9677-9b1dfefbf5aa",
    "metadata": {},
    "outputs": [],
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "d94d1030-ff01-4ff4-9102-bacb20960eb9",
    "metadata": {},
    "outputs": [],
@@ -363,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a80c1357-e8c9-4bcb-8473-b1f8651aa0bb",
    "metadata": {},
    "outputs": [],
@@ -374,17 +377,19 @@
     "    except:\n",
     "        rescrape()\n",
     "    finally:\n",
-    "        rescrape()"
+    "        rescrape()\n",
+    "        with open('scrape_log.txt', mode = 'a') as f:\n",
+    "            f.write('Scrape completed on {}\\n'.format(date.today()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "63cd64a7-2baa-4ec0-a24c-536bf3549e7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper()"
+    "rescrape()"
    ]
   },
   {
