--- a/Craigslist scraping.ipynb
+++ b/Craigslist scraping.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1fb758f6-f00a-421d-ab38-254c9867c85f",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "69252f04-3bdb-4abd-9f9d-7939779f4036",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e39a40ef-92c7-41c3-9e20-5de73ba5b694",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e1a0608b-92e4-4a2f-abf0-3859857260e8",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "efd6c242-cfb9-4129-9e97-f8518cc0d362",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6182570e-583f-40ee-9444-f7e8d2ce57c1",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "333c1cf9-efd3-4285-8e4a-96ebf79b8aa3",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "b2252836-81a1-41a4-8d1c-254a3e5ef623",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7cacc772-b9b9-41cb-a568-aa921b6b4fde",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3519b412-c425-4482-9677-9b1dfefbf5aa",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d94d1030-ff01-4ff4-9102-bacb20960eb9",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "a80c1357-e8c9-4bcb-8473-b1f8651aa0bb",
    "metadata": {},
    "outputs": [],
@@ -380,6 +380,16 @@
     "        rescrape()\n",
     "        with open('scrape_log.txt', mode = 'a') as f:\n",
     "            f.write('Scrape completed on {}\\n'.format(date.today()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b22822d-9733-47c9-ae09-f989f9e2a29d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scraper()"
    ]
   },
   {
